--- a/stroke_prediction_part2.ipynb
+++ b/stroke_prediction_part2.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMyTVt3RQfyIyntJrGcStSC",
+      "authorship_tag": "ABX9TyP+G0z6G2mxPnJcdVy3Jz2c",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -48,11 +48,21 @@
       "source": [
         "## Project Description \n",
         "\n",
-        "This dataset will be used to predict whether a patient is likely to get stroke based in these informations:  \n",
-        "\n"
+        "According to the World Health Organization (WHO) stroke is the 2nd leading cause of death globally, responsible for approximately 11% of total deaths.\n",
+        "This dataset is used to predict whether a patient is likely to get stroke based on the input parameters like gender, age, various diseases, and smoking status. Each row in the data provides relavant information about the patient.\n"
       ],
       "metadata": {
         "id": "DBbKMn2jq3Wu"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Data Source\n",
+        "**Kaggle** : https://www.kaggle.com/datasets/fedesoriano/stroke-prediction-dataset"
+      ],
+      "metadata": {
+        "id": "az5emON6uaoi"
       }
     },
     {
