--- a/stroke_prediction_part2.ipynb
+++ b/stroke_prediction_part2.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyP+G0z6G2mxPnJcdVy3Jz2c",
+      "authorship_tag": "ABX9TyMM4qsyoEcww6NvYyrZHhiK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -68,7 +68,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Data Dictionary\n",
+        "## Data **Dictionary**\n",
         "1) **id:** unique identifier\n",
         "\n",
         "2) **gender:** \"Male\", \"Female\" or \"Other\"\n",
@@ -85,7 +85,7 @@
         "\n",
         "8) **Residence_type:** \"Rural\" or \"Urban\"\n",
         "\n",
-        "9)** avg_glucose_level:** average glucose level in blood\n",
+        "9) **avg_glucose_level:**  average glucose level in blood\n",
         "\n",
         "10) **bmi:** body mass index\n",
         "\n",
